# blender

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  make.bat
build_files/build_environment/: CMakeLists.txt  install_deps.sh
build_files/build_environment/cmake/: alembic.cmake  boost.cmake  boost_build_options.cmake  download.cmake  dpcpp.cmake  fmt.cmake  harvest.cmake  igc.cmake  imath.cmake  jpeg.cmake  levelzero.cmake  llvm.cmake  nasm.cmake  ocloc.cmake  opencolorio.cmake  openexr.cmake  openimageio.cmake  openjpeg.cmake  opensubdiv.cmake  openvdb.cmake  options.cmake  osl.cmake  pystring.cmake  python_site_packages.cmake  robinmap.cmake  usd.cmake  versions.cmake
build_files/build_environment/patches/: dpcpp.diff  openvdb.diff  usd.diff
build_files/buildbot/codesign/: windows_code_signer.py
build_files/cmake/: macros.cmake
build_files/cmake/Modules/: FindOpenEXR.cmake  FindOpenImageIO.cmake  FindSYCL.cmake  FindShaderC.cmake  FindUSD.cmake  FindWebP.cmake  Findmsgpack.cmake
build_files/cmake/config/: blender_full.cmake  blender_lite.cmake  blender_release.cmake
build_files/cmake/platform/: platform_apple.cmake  platform_old_libs_update.cmake  platform_unix.cmake  platform_win32.cmake
build_files/config/: pipeline_config.json  pipeline_config.yaml
build_files/utils/: make_update.py
build_files/windows/: doc_py.cmd  find_sphinx.cmd  show_help.cmd
doc/guides/: GN_converting_attribute_sockets.md
doc/license/: SPDX-license-identifiers.txt
doc/python_api/: sphinx_doc_gen.py
intern/: CMakeLists.txt
intern/atomic/tests/: atomic_test.cc
intern/cycles/: CMakeLists.txt
intern/cycles/blender/: CMakeLists.txt  blender_camera.cpp  blender_curves.cpp  blender_geometry.cpp  blender_gpu_display.cpp  blender_gpu_display.h  blender_light.cpp  blender_mesh.cpp  blender_object.cpp  blender_object_cull.cpp  blender_particles.cpp  blender_python.cpp  blender_session.cpp  blender_session.h  blender_shader.cpp  blender_sync.cpp  blender_sync.h  blender_util.h  blender_volume.cpp  curves.cpp  mesh.cpp  object.cpp  session.h  shader.cpp  sync.cpp
intern/cycles/bvh/: bvh.cpp  bvh.h  bvh_build.cpp  bvh_embree.cpp  bvh_optix.cpp  bvh_optix.h  bvh_params.h  bvh_split.cpp  bvh_unaligned.cpp
intern/cycles/cmake/: external_libs.cmake
intern/cycles/device/: CMakeLists.txt  device.cpp  device.h  device_cpu.cpp  device_denoise.h  device_dummy.cpp  device_memory.cpp  device_memory.h  device_multi.cpp  device_optix.cpp
intern/cycles/device/cuda/: device_cuda.h  device_cuda_impl.cpp
intern/cycles/device/oneapi/: device.cpp  device.h  device_impl.cpp  device_impl.h  queue.cpp  queue.h  sycl.h  util.cpp  util.h
intern/cycles/device/opencl/: device_opencl.h  device_opencl_impl.cpp
intern/cycles/graph/: node.cpp  node.h  node_type.cpp  node_type.h
intern/cycles/hydra/: CMakeLists.txt  field.cpp  field.h
intern/cycles/integrator/: pass_accessor.cpp  pass_accessor.h  path_trace.cpp  path_trace.h  path_trace_work.cpp  path_trace_work_gpu.cpp  render_scheduler.cpp  render_scheduler.h
intern/cycles/kernel/: CMakeLists.txt  kernel_bake.h  kernel_emission.h  kernel_globals.h  kernel_path.h  kernel_path_branched.h  kernel_shader.h  kernel_subsurface.h  kernel_types.h  types.h
intern/cycles/kernel/device/oneapi/: CMakeLists.txt  compat.h  context_begin.h  device_id.h  dll_interface_template.h  globals.h  image.h  kernel.cpp  kernel.h  kernel_templates.h  vs2019_aot_config_file.props.cmake  vs2019_config_file.props.cmake
intern/cycles/render/: CMakeLists.txt  alembic.cpp  alembic.h  alembic_read.cpp  alembic_read.h  attribute.cpp  attribute.h  background.cpp  background.h  bake.cpp  buffers.cpp  buffers.h  camera.cpp  camera.h  colorspace.cpp  curves.cpp  film.cpp  film.h  geometry.cpp  geometry.h  graph.h  hair.cpp  hair.h  image.cpp  image.h  integrator.cpp  integrator.h  light.cpp  light.h  mesh.cpp  mesh.h  mesh_displace.cpp  mesh_subdivision.cpp  nodes.cpp  nodes.h  object.cpp  object.h  osl.cpp  particles.h  procedural.cpp  (+14 more)
intern/cycles/scene/: film.cpp  integrator.cpp  integrator.h  pass.cpp  scene.cpp
intern/cycles/subd/: subd_split.cpp  subd_split.h
intern/cycles/test/: render_graph_finalize_test.cpp
intern/cycles/util/: atomic.h  half.h  math.h  types_float3.h  types_float3_impl.h  types_int4_impl.h  util_half.h  util_param.h
intern/ghost/: CMakeLists.txt  GHOST_C-api.h  GHOST_IContext.h  GHOST_ISystem.h  GHOST_IWindow.h  GHOST_Types.h
intern/ghost/intern/: GHOST_C-api.cpp  GHOST_Context.h  GHOST_ContextVK.cpp  GHOST_ContextVK.h  GHOST_Debug.h  GHOST_EventManager.cpp  GHOST_NDOFManager.h  GHOST_Rect.cpp  GHOST_System.h  GHOST_SystemCocoa.h  GHOST_SystemCocoa.mm  GHOST_SystemNULL.h  GHOST_SystemSDL.cpp  GHOST_SystemSDL.h  GHOST_SystemWayland.cpp  GHOST_SystemWayland.h  GHOST_SystemWin32.cpp  GHOST_SystemWin32.h  GHOST_SystemX11.cpp  GHOST_SystemX11.h  GHOST_TimerManager.cpp  GHOST_Window.h  GHOST_WindowCocoa.h  GHOST_WindowCocoa.mm  GHOST_WindowWayland.cpp  GHOST_WindowWin32.cpp  GHOST_WindowWin32.h  GHOST_WindowX11.cpp  GHOST_WindowX11.h  GHOST_Wintab.cpp  GHOST_Wintab.h  GHOST_XrAction.cpp  GHOST_XrAction.h  GHOST_XrContext.cpp  GHOST_XrContext.h  GHOST_XrControllerModel.cpp  GHOST_XrControllerModel.h  GHOST_XrException.h  GHOST_XrGraphicsBinding.cpp  GHOST_XrSession.cpp  (+2 more)
intern/mantaflow/intern/: MANTA_main.cpp  manta_fluid_API.cpp
intern/opencolorio/: fallback_impl.cc  gpu_shader_display_transform.glsl  ocio_capi.cc  ocio_capi.h  ocio_impl.cc  ocio_impl.h  ocio_impl_glsl.cc
intern/rigidbody/: RBI_api.h  rb_bullet_api.cpp
intern/shader_compiler/: CMakeLists.txt  shader_compiler.hh
intern/shader_compiler/intern/: Compiler.cc  Result.cc
release/datafiles/: blender_icons_geom.py
source/blender/: CMakeLists.txt
source/blender/blenlib/: BLI_any.hh  (+55 more)
source/creator/: CMakeLists.txt  creator.c  creator_args.c
tests/python/: CMakeLists.txt  bevel_operator.py  bl_pyapi_idprop.py  boolean_operator.py  eevee_render_tests.py  geo_node_test.py  modifiers.py  operators.py  physics_cloth.py  physics_particle_instance.py  test_classes.py
(+2900 files in other folders)
